Alpha 4

- Brewing beer is here! Includes new "brewer" profession and brewery room type with plenty of new furniture and items
- Liquid containers such as buckets are now used correctly if they already contain a liquid i.e. will be used to fill barrels, or ignored otherwise
- Constructions no longer lock material types until all are available
- Fixed the Linux distribution - apologies this has been broken a while - with many thanks to community member gammelget / @falkowich
- Fix for mining jobs getting stuck as inaccessible when in newly-discovered caverns
- Fixed an issue where status effects were not persisted between saves

Alpha 3.6.5 - 5th July 2020

- Fixed issues with failing to drink - drinking from water barrels now respects the available amount of water within
- Changed bucket production quota from a fixed amount of 6 to 1 for every 5 settlers
- Fixed an issue where items would become stuck as assigned when a crafting station was inaccessible
- Disabled sounds when placing items down
- Item types now define the sound asset used when they are eaten/consumed, so now rations no longer have an associated sound

Alpha 3.6.4 - 3rd July 2020

- Improved checking of inaccessible jobs, fixes an issue where once-inaccessible jobs would sometimes get stuck as inaccessible forever
- Removed tool requirement from deconstruction jobs to avoid scenario of being unable to deconstruct furniture to retrieve a required tool
- Changed stone walls to be constructed with chisel rather than small hammer

Alpha 3.6.3 - 30th June 2020

- Fixed a crash that occurred when eating rations from a table
- Exposed stockpile groups to modding

Alpha 3.6.2 - 29th June 2020

- Fixed a crash introduced in 3.6.1 when drinking soup (many thanks to those of you with crash reporting switched on to jump on top of it quickly!)
- Fixed some issues with tracking food placed on tables, which was causing invalid food assignments to be created

Alpha 3.6.1 - 29th June 2020
