@@ -10,7 +10,7 @@ import java.nio.charset.Charset;
 
 public class GlobalSettings {
 	public static final boolean MAP_REVEALED = false;
-	public static final boolean DEV_MODE = true;
+	public static final boolean DEV_MODE = false;
 
 	public static boolean USE_EDGE_SCROLLING = true;
 	public static boolean PAUSE_FOR_NOTIFICATIONS = true;
